--- a/doc/thesis/library.bib
+++ b/doc/thesis/library.bib
@@ -286,6 +286,26 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/17825582},
 volume = {38},
 year = {2007}
 }
+@article{504754,
+address = {New York, NY, USA},
+author = {Thrun, Sebastian},
+doi = {http://doi.acm.org/10.1145/504729.504754},
+issn = {0001-0782},
+journal = {Commun. ACM},
+number = {3},
+pages = {52--57},
+publisher = {ACM},
+title = {{Probabilistic robotics}},
+volume = {45},
+year = {2002}
+}
+@article{thrun2008probabilistic,
+author = {Thrun, S and Burgard, W and Fox, D},
+journal = {cognition},
+title = {{Probabilistic Robotics (Intelligent Robotics and Autonomous Agents)}},
+volume = {96},
+year = {2008}
+}
 @article{Thomas2006a,
 author = {Thomas, Liya and Mili, Lamine M and Watson, Layne T and Abbott, A Lynn and Kline, D Earl},
 file = {:home/micahc/Documents/papers/Thomas et al./Unknown/Thomas et al. - 2006 - Automated Detection of Surface Defects on Barked Hardwood Logs and Stems Using 3-D Laser Scanned Data Automated Detection of Surface Defects on Barked Hardwood Logs and.pdf:pdf},
@@ -2239,7 +2259,7 @@ volume = {52},
 year = {2010}
 }
 @article{Arulampalam2002a,
-author = {Arulampalam, M.S. and Maskell, S. and Gordon, N. and Clapp, T.},
+author = {Arulampalam, Sanjeev and Maskell, Simon and Gordon, Neil and Clapp, Tim},
 doi = {10.1109/78.978374},
 file = {:home/micahc/Documents/papers/\`{O} et al./Unknown/\`{O} et al. - Unknown - \`{I}\`{u}\o\'{o}\"{o} \ae\'{o}\`{o}¹ð \`{o}.pdf:pdf},
 issn = {1053587X},
