--- a/doc/thesis/methods.tex
+++ b/doc/thesis/methods.tex
@@ -280,15 +280,15 @@ strictly identifiable, which is discussed in
 \begin{figure}
 \centering
 \includegraphics[trim=6cm 2cm 6cm 2cm,width=15cm]{images/mean_response}
-\caption{Response to $0.1s$ impulses with the mean parameters from 
-Friston et al. \cite{Friston2000b}}
+\caption{BOLD Response to $0.1$ s impulses with the mean parameters from 
+Friston et al. \cite{Friston2002b}}
 \label{fig:MeanResponseF}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[trim=6cm 2cm 6cm 2cm,width=15cm]{images/mean_response_johnston}
-\caption{Response to $0.1s$ impulses with the mean parameters from 
+\caption{BOLD Response to $0.1$ s impulses with the mean parameters from 
 Johnston et al. \cite{Johnston2007}}
 \label{fig:MeanResponseJ}
 \end{figure}
