--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -207,6 +207,7 @@ List of Acronyms
 \acro{MR}{Magnetic Resonance}
 \acro{MRI}{Magnetic Resonance Imaging}
 \acro{O2Hb}{Oxygenated Hemoglobin}
+\acro{ODE}{Ordinary Differential Equation}
 \acro{PDF}{Probability Density Function}
 \acro{RF}{Radio Frequency}
 \acro{RMSE}{Root Mean Squared Error}
@@ -231,7 +232,7 @@ List of Acronyms
 \include{results}
 \include{resultsB}
 \include{discussion}
-\include{conclusion}
+%\include{conclusion}
 
 \bibliographystyle{plain}
 %\bibliographystyle{abbrvnat}
