--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -84,8 +84,9 @@ to minimize the error.
 \begin{figure}
 \centering
 \includegraphics[scale=.7]{images/HRF}
-\caption{Canonical Hemodynamic Response Function (y-axis units are arbitrary because 
-normalization is performed).}
+\caption[Canonical Hemodynamic Response Function]
+{Canonical Hemodynamic Response Function, normalization makes $y$ units
+arbitrary}
 \label{fig:HRF}
 \end{figure}
 
@@ -408,15 +409,17 @@ the first two moments, which is the basis for the \ac{UKF}, is not wise.
 \begin{figure}
 \centering
 \includegraphics[trim=6cm .75cm 6cm .75cm,width=16cm]{images/gauss_step_point1sec_3sigma.pdf}
-\caption[Q-Q Plot Of Standard Normal and Result of $0.1$s BOLD Simulation Output]
-{Q-Q Plot Of Standard Normal and Result of $0.1$ BOLD Simulation Output. A
-perfect Gaussian would fall on the green line}
+\caption[Q-Q Plot Of Standard Normal and Result of $0.1$ s BOLD Simulation Output]
+{Q-Q Plot Of Standard Normal and Result of $0.1$ s BOLD Simulation Output. A
+perfect Gaussian would fall on the green line.}
 \label{fig:transp1s}
 \end{figure}
 
 \begin{figure}
 \includegraphics[trim=6cm .75cm 6cm .75cm,width=16cm]{images/gauss_step_1sec_3sigma.pdf}
-\caption{Q-Q Plot Of Standard Normal and Result of $1$s BOLD Simulation Output}
+\caption[Q-Q Plot Of Standard Normal and Result of $1$ s BOLD Simulation Output]
+{Q-Q Plot Of Standard Normal and Result of $1$ s BOLD Simulation Output. A
+perfect Gaussian would fall on the green line.}
 \label{fig:trans1s}
 \end{figure}
 
